syntax = "proto3";
package nan0;
option go_package = "nan0";
import "google/protobuf/any.proto";

message Service {
    int32 port = 1;
    int64 timeToLiveInMS = 2;
    int64 startTime = 3;
    string hostName = 4;
    string serviceName = 5;
    string serviceType = 6;
}

message ServiceList {
    string serviceType = 2;
    repeated Service servicesAvailable = 3;
}

message ServiceMessage {
    google.protobuf.Any data = 1;
}